--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
+pt-BR
+Esse projeto é um slideshow com algumas imagens de paisagem que eu gosto, você pode controlar os slides.
+Há um modal no meio dos slides, quando você clicar no modal você vai conseguir ver as horas enquanto
+os slides vão passando.
+Seria como um papel de parede.
+
+en-US
 This project is a slideshow with some beautiful landscapes, you can control the slides.
 There's a modal in the middle of it, once you click on it you will see the time while the images are sliding.
-I found it very chill and fun to build.
+It looks like a wallpaper.
