--- a/readme
+++ b/readme
@@ -1,10 +1,12 @@
 pt-BR
+Projeto criado com HTML, CSS e Javascript.
 Esse projeto é um slideshow com algumas imagens de paisagem que eu gosto, você pode controlar os slides.
 Há um modal no meio dos slides, quando você clicar no modal você vai conseguir ver as horas enquanto
 os slides vão passando.
 Seria como um papel de parede.
 
 en-US
+Project built with HTML, CSS and Javascript.
 This project is a slideshow with some beautiful landscapes, you can control the slides.
 There's a modal in the middle of it, once you click on it you will see the time while the images are sliding.
 It looks like a wallpaper.
